Github is unreliable, set parameters on maven itself